# platform-secrets

./: .coverage-unit.xml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.k8s  Makefile  README.md  k8s.mk  minikube.sh  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-helm-chart.yml  release-image.yml  release.yml  setup-automerge.yml  test.yaml  test.yml  update-pre-commit.yml
charts/platform-secrets/: Chart.yaml  values-dev.yaml  values-template.yaml  values.yaml
charts/platform-secrets/templates/: _helpers.tpl  deployment.yaml  externalSecret.yaml  ingress.yaml  rbac.yaml  secrets.yaml  service.yaml
deploy/platformsecrets/: Chart.yaml  values-dev.yaml  values-template.yaml
deploy/platformsecrets/templates/: deployment.yaml
platform_secrets/: api.py  base.py  config.py  config_factory.py  docker_client.py  identity.py  jobs_service.py  kube_client.py  logs.py  project_deleter.py  service.py  user.py  utils.py  validators.py
requirements/: syntax.txt  test.txt
tests/integration/: admin.py  conftest.py  conftest_admin.py  conftest_auth.py  conftest_clusters.py  conftest_config.py  conftest_kube.py  test_api.py  test_jobs_service.py  test_kube.py  test_kube_client.py  test_service.py
tests/k8s/: cluster.sh  dockerengineapi.yml  logging.yml  platformapi.yml  platformconfig.yml  pod.yml  rbac.yml
tests/unit/: test_config.py  test_docker_client.py  test_kube.py  test_project_deleter.py  test_validators.py
