[metadata]
name = platform-secrets
description = Neu.ro platform secrets
url = https://github.com/neuro-inc/platform-secrets
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.9
packages = find:
platforms = any
include_package_data = True
install_requires =
    aiohttp==3.8.6
    yarl==1.9.2
    multidict==6.0.4
    neuro-auth-client==22.6.1
    trafaret==2.1.1
    neuro-logging==21.12.2
    aiohttp-cors==0.7.0

[options.entry_points]
console_scripts =
    platform-secrets = platform_secrets.api:main

[options.extras_require]
dev =
    mypy==1.5.1
    pre-commit==3.4.0
    pytest==7.4.2
    pytest-asyncio==0.21.1
    pytest-cov==4.0.0

[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black
combine_as_imports = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:jose
    ignore::ResourceWarning:

[coverage:run]
branch = True
source = platform_secrets

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true
